# southerncode-challenge

./: .git-blame-ignore-revs  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bookings/: filters.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_stay_length.py  0003_rename_date_end_booking_end_date_and_more.py
core/: models.py
core/migrations/: 0002_property_created_at_property_updated_at_and_more.py  0003_alter_booking_property_alter_pricingrule_property_and_more.py  0004_delete_pricingrule.py  0005_delete_booking.py
pricing_rules/: admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
pricing_rules/migrations/: 0001_initial.py
properties/: filters.py  models.py  serializers.py  tests.py  urls.py  views.py
properties/migrations/: 0001_initial.py
reservations/: settings.py  urls.py
